# ToDo_test

./: main.py  pyproject.toml  toDo_base.db
api/: __init__.py
api/services/: crud.py  dependencies.py  views.py
api/shemas/: __init__.py  tasks.py  users.py
core/: config.py
db/: __init__.py  base.py  database.py  tables.py
