[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = ""
authors = ["kimfi <my_mail@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.114.0"}
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
